--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   text-align: center;
   padding: 100px 32px;
   margin-top: -60px;
-  background-image: url("B12A01-landing-launchpad/Assets/Hero-bg.png"); 
+  background-image: url("Assets/Hero-bg.png"); 
   background-size: contain;
 }
 
